--- a/thebackstage/package.json
+++ b/thebackstage/package.json
@@ -12,15 +12,17 @@
     "cookie-parser": "~1.4.3",
     "createerror": "^1.3.0",
     "debug": "~2.6.9",
-    "ejs": "~2.5.2",
+    "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "~1.14.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "mapbox-gl": "^0.49.0-beta.1",
     "method-override": "~2.3.6",
     "mongoose": "~4.13.1",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
